binrw/tests/ui/invalid_keyword_unit_enum.stderr
error: expected one of: `big`, `little`, `map`, `try_map`, `magic`, `import`, `import_raw`, `repr`
 --> $DIR/invalid_keyword_unit_enum.rs:5:6
  |
5 | #[br(invalid_unit_enum_keyword)]
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^
